kubernetes/akka-cluster.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: users-service
  name: users-service
  namespace: users-service-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
        actorSystemName: users-service
    spec:
      containers:
        - name: users-service
          image: users-service:latest
          # remove for real clusters, useful for minikube
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /ready
              port: management
            periodSeconds: 10
            failureThreshold: 3
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: "/alive"
              port: management
            periodSeconds: 10
            failureThreshold: 5
            initialDelaySeconds: 20
          ports:
            # akka-management and bootstrap
            - name: management
              containerPort: 8558
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: remoting
              containerPort: 25520
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: users-service
  name: users-service
  namespace: users-service-1
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: users-service
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-service-ingress
  namespace: users-service-1
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8080
